--- a/scss/main.scss
+++ b/scss/main.scss
@@ -62,6 +62,11 @@ a, a:hover {
         }
     }
 header {
+    .mobile-nav {
+        display: inline-block;
+        font-size: 25px;
+        display: none;
+    }
     .logo {
         float: left;
         a {
@@ -148,7 +153,7 @@ header {
                 .portfolio-content__item__img__link {
                     display: none;
                     position: absolute;
-                    top: 0;
+                    top: -2px;
                     width: 100%;
                     height: 100%;
                     background-color: rgba(0, 0, 0, 0.7);
@@ -352,5 +357,84 @@ footer {
     .wrapper {
         margin-left: 15px;
         margin-right: 15px;
+    }
+}
+@media only screen and (max-width: 991px) {
+    .services {
+        .services__block__item {
+            margin-bottom: 30px;
+        }
+    }
+    .contact-us .contact-us__form-block {
+        margin-top: 30px;
+        #contact-us__form .contact-us__form-submit {
+            float: left;
+        }    
+    }
+}
+@media only screen and (max-width: 768px) {
+    .banner {
+        margin-top: 55px;
+        padding-top: 0;
+        height: 432px;
+
+    }
+    header {
+        .banner {
+            margin-top: 35px;
+        }
+        nav {
+            background: rgba(0, 0, 0, 0.8);
+            display: block;
+            margin: 0 -15px;
+            position: fixed;
+            z-index: 5;
+            padding: 0;
+            margin-top: -55px;
+            width: 100%;
+            .mobile-nav {
+                margin: 15px;
+                display: inline-block;
+            }
+            .logo {
+                float: right;
+                margin-top: 15px;
+                padding-right: 15px;
+            }
+            .top-navigation {
+                display: none;
+                margin: 0;
+                float: none;
+                .top-navigation__list {
+                    margin: 0;
+                    float: none;
+                    padding: 5px 0;
+                    display: block;
+                    border-top: 1px solid #fff;
+                    .top-navigation__list__link {
+                        width: 100%;
+                        padding: 10px 15px;
+                    }
+                }
+            }
+        }    
+            .header-content {
+                margin: 0;
+               padding-top: 100px;
+                h1 {
+                    font-size: 28px;
+                    margin-bottom: 75px;
+                }
+            }
+        
+    }
+}
+@media only screen and (max-width: 768px) {
+    header {
+        .header-content {
+            h1 {
+                font-size: 28px;
+            }
+        }
     }
 }
