fix font error, import fonts styles in css file

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import "_reset.scss";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto');
 $blue: #39c9da;
 $dark-grey: #504f50;
 $open-sans: 'Open Sans', sans-serif;
