--- a/css/main.css
+++ b/css/main.css
@@ -336,16 +336,13 @@ footer {
     padding-top: 0;
     height: 432px; }
 
-  header .banner {
-    margin-top: 35px; }
   header nav {
     background: rgba(0, 0, 0, 0.8);
     display: block;
-    margin: 0 -15px;
+    margin: -55px -15px 0 -15px;
     position: fixed;
     z-index: 5;
     padding: 0;
-    margin-top: -55px;
     width: 100%; }
     header nav .mobile-nav {
       margin: 15px;
